--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:site" content="@example_handle">
 <meta name="twitter:title" content="Ash Kaash Sucking Dick 18+ Viral Video">
 <meta name="twitter:description" content="Ash Kaash Sucking Dick 18+ Viral Video">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://github.com/Viddfinder/Ash/blob/main/ash.jpg?raw=true">
 <!-- Redirect to YouTube video -->
 <meta http-equiv="refresh" content="0; url=https://youtu.be/F7JA5J5Kc4Q">
 </head>
